@startuml
'https://plantuml.com/class-diagram

class MenuItem {
    + String name
    + String description
    + boolean vegetarian
    + double price
    + void print()
}

class DinnerMenu {
    - static final int MAX_ITEMS = 6
    - int numberOfItems = 0
    - MenuItem[] menuItems
    + void addItem(String name, String description, boolean vegetarian, double price)
    + MenuItem[] getMenuItems()
}

class DinnerMenuIterator {
    - MenuItem[] items
    - int position = 0
    + DinnerMenuIterator(MenuItems[] items)
    + boolean hasNext()
    + MenuItem next()
}

class PancakeHouseMenu {
    - ArrayList menuItems
    + void addItem(String name, String description, boolean vegetarian, double price)
    + ArrayList getMenuItems()
}

class PancakeHouseMenuIterator {
    - ArrayList items
    - int position = 0
    + PancakeHouseMenuIterator(ArrayList items)
    + boolean hasNext()
    + MenuItem next()
}

class Waitress {
    - DinnerMenu dinnerMenu
    + Waitress(DinnerMenu dinnerMenu)
    + void printMenu()
}

Waitress -right-> PancakeHouseMenuIterator
Waitress -left-> DinnerMenuIterator
Waitress ..> MenuItem

DinnerMenuIterator --> MenuItem
PancakeHouseMenuIterator --> MenuItem

DinnerMenu -up-> MenuItem
PancakeHouseMenu -up-> MenuItem



@enduml